@@ -1,0 +1,15 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2015-10-15T18:55:42Z"
+ content="""
+Yeah, this is a bug, and one I was able to reproduce. It was introduced in
+the last release of git-annex.
+
+Luckily, it's only a cosmetic bug. The `git annex init` does
+succeed, and your repo is left in an ok state. If you continue
+along the walkthrough path, adding some files and syncing with origin, it
+will proceed to set up the origin appropriately and everything should work.
+
+I'm gonna fix the bug of course. Indeed, it's fixed in git master now.
+"""]]
